--- a/1 - Data Entry/HTML Dialog/Basic-Input-Dialog.html
+++ b/1 - Data Entry/HTML Dialog/Basic-Input-Dialog.html
@@ -2,58 +2,44 @@
 <html lang="en">
 <head>
     <!--
-        Root paths that start with '/' point to HTML directory in the CSPro installation folder 
+        Root paths that start with '/' point to the HTML directory in the CSPro installation folder
         All standard HTML dialogs and supporitng third party libraries can be accessed with root paths
         Relative paths are resolved relative to the application folder
 
-        In JavaScript code wherever you see CSPro.--- this is calling CSPro-JS interface
-        In this example only three interface methods are used:
-        CSPro.getInputData() - returns a string passed as a second argument to htmlDialog() function
-        CSPro.returnData(val) - closes the dialog and returns argument 'val' back to CSPro. htmlDialog() function return this value
-        CSPro.setDisplayOptions(JSON) - adjusts some external dialog parameters such as width, height, and title border color in this case
+        In JavaScript code wherever you see CS.--- this is using the Action Invoker
+        In this example only three actions are used:
+            CS.UI.getInputData - returns the input data passed to the htmlDialog function
+            CS.UI.closeDialog - closes the dialog
+            CS.UI.setDisplayOptions - adjusts some external dialog parameters such as the width and height
     -->
 
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, minimum-scale=1, user-scalable=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/external/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="/external/bootstrap/bootstrap-icons.css">
-    <link rel="stylesheet" href="/css/dialogs.css">
-
+    <script src="/action-invoker.js"></script>
     <script src="/external/jquery/jquery.min.js"></script>
-    <script src="/external/bootstrap/bootstrap.bundle.min.js"></script>
 
     <script>
-        
         $(document).ready(function () {
-            //This is just to set the focus to the output control
-            setTimeout(function () {
-                $('#output').focus();
-            }, 300);
+            const CS = new CSProActionInvoker();
 
-            //Here we get a string passed as a second parameter to our htmlDialog() call
-            //In our case text entered in a prompt
-            var inputText = CSPro.getInputData();
+            //Here we get the input data passed to the htmlDialog call
+            //In our case the text entered in a prompt
+            const input = CS.UI.getInputData();
 
             //now setting it to h1 element
-            $('#input').html(inputText);
+            $('#input').html(input.text);
 
             //Returning entered text on button click
             $('button').click(function () {
-                CSPro.returnData("");
+                CS.UI.closeDialog();
             });
 
             //Adjusting height / width of the web view window
-            CSPro.setDisplayOptions(
-                JSON.stringify(
-                    {
-                        "width": $('.mainContainer').outerWidth(true),
-                        "height": $('.mainContainer').outerHeight(true),
-                    }
-                )
-            );
+            CS.UI.setDisplayOptions({
+                width: $('.mainContainer').outerWidth(true),
+                height: $('.mainContainer').outerHeight(true)
+            });
         });
     </script>
 
