--- a/1 - Data Entry/CAPI Census/Menu/Interviewer-Status-Report.html
+++ b/1 - Data Entry/CAPI Census/Menu/Interviewer-Status-Report.html
@@ -45,7 +45,9 @@
 				<td>~~strip(ISR_INTERVIEWER_NAME(ctr))~~</td>
 				<td>~~ISR_COMPLETE_HOUSEHOLDS(ctr)~~</td>
 				<td>~~ISR_PARTIAL_HOUSEHOLDS(ctr)~~</td>
-				<td>~~timestring("%H:%M - %m/%d/%y", ISR_LAST_INTERVIEW(ctr))~~</td>
+				<? if ISR_LAST_INTERVIEW(ctr) <> 0 then ?>
+					<td>~~timestring("%H:%M - %m/%d/%y", ISR_LAST_INTERVIEW(ctr))~~</td>
+				<? endif; ?>
 			</tr>
 		<? enddo; ?>
 		</thead>
